--- a/SDL2_project/SDL2_project.vcxproj.filters
+++ b/SDL2_project/SDL2_project.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="BackgroundScroll.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
+    <ClInclude Include="Level.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Logger.cpp">
@@ -129,6 +132,9 @@
       <Filter>Source Files\Game</Filter>
     </ClCompile>
     <ClCompile Include="BackgroundScroll.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Level.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
   </ItemGroup>
