--- a/SDL2_project/SDL2_project.vcxproj
+++ b/SDL2_project/SDL2_project.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="AssetManager.h" />
     <ClInclude Include="AudioManager.h" />
     <ClInclude Include="BackgroundScroll.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Graphics.h" />
@@ -157,6 +158,7 @@
     <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="BackgroundScroll.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="GameEntity.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Graphics.cpp" />
