Modified------- Level -> added level state, gameover, next stage PlayScreen->handing level state from Level script ScreenManager->if the state is gameover, go back to start screen Bullet -> reduced bullet sound AudioManager-> added SFXVolume function
Added-------
BezierPath-> Bezier curve creation logic
MathHelper-> added BezierPath calculation function
Rocket(fireball)->now player shoots fireball using BezierPath logic
Player-> added rocket fire handling

--- a/SDL2_project/SDL2_project.vcxproj
+++ b/SDL2_project/SDL2_project.vcxproj
@@ -137,7 +137,9 @@
     <ClInclude Include="AssetManager.h" />
     <ClInclude Include="AudioManager.h" />
     <ClInclude Include="BackgroundScroll.h" />
+    <ClInclude Include="BezierPath.h" />
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Graphics.h" />
@@ -145,8 +147,10 @@
     <ClInclude Include="Level.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="MathHelper.h" />
+    <ClInclude Include="NormalBullet.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayScreen.h" />
+    <ClInclude Include="Rocket.h" />
     <ClInclude Include="ScoreBoard.h" />
     <ClInclude Include="ScreenManager.h" />
     <ClInclude Include="StartScreen.h" />
@@ -158,7 +162,9 @@
     <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="BackgroundScroll.cpp" />
+    <ClCompile Include="BezierPath.cpp" />
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="GameEntity.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Graphics.cpp" />
@@ -166,8 +172,10 @@
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NormalBullet.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayScreen.cpp" />
+    <ClCompile Include="Rocket.cpp" />
     <ClCompile Include="ScoreBoard.cpp" />
     <ClCompile Include="ScreenManager.cpp" />
     <ClCompile Include="StartScreen.cpp" />
