Added a box tagged enemy which later on will break and explode. Players can now be toggled between spaceship and astronaut. Small function to Plaer 1 to manipulate score and health/lives.

--- a/SDL2_project/SDL2_project.vcxproj
+++ b/SDL2_project/SDL2_project.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="AudioManager.h" />
     <ClInclude Include="BackgroundScroll.h" />
     <ClInclude Include="BezierPath.h" />
+    <ClInclude Include="Box.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="GameEntity.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="BackgroundScroll.cpp" />
     <ClCompile Include="BezierPath.cpp" />
+    <ClCompile Include="Box.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="GameEntity.cpp" />
