I somehow deleted all the filters. brought them back. phew XD

--- a/SDL2_project/SDL2_project.vcxproj
+++ b/SDL2_project/SDL2_project.vcxproj
@@ -201,6 +201,15 @@
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="highscore0.txt" />
+    <Text Include="highscore1.txt" />
+    <Text Include="highscore2.txt" />
+    <Text Include="highscore3.txt" />
+    <Text Include="highscore4.txt" />
+    <Text Include="highscore5.txt" />
+    <Text Include="highscore6.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
