--- a/SDL2_project/SDL2_project.vcxproj.filters
+++ b/SDL2_project/SDL2_project.vcxproj.filters
@@ -114,7 +114,6 @@
     <ClInclude Include="EndingScreen.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
-<<<<<<< HEAD
     <ClInclude Include="PhysicsHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -135,7 +134,7 @@
     </ClInclude>
     <ClInclude Include="Rocket.h">
       <Filter>Header Files\Game\Projectiles</Filter>
-=======
+    </ClInclude>
     <ClInclude Include="Enemy.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
@@ -144,7 +143,6 @@
     </ClInclude>
     <ClInclude Include="Formation.h">
       <Filter>Header Files\Game</Filter>
->>>>>>> 4b986f7d8f755482192996f9f346a7966d54e251
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -217,7 +215,6 @@
     <ClCompile Include="EndingScreen.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
-<<<<<<< HEAD
     <ClCompile Include="PhysicsEntity.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
@@ -235,7 +232,7 @@
     </ClCompile>
     <ClCompile Include="Rocket.cpp">
       <Filter>Source Files\Game\Projectiles</Filter>
-=======
+    </ClCompile>
     <ClCompile Include="Formation.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
@@ -244,7 +241,6 @@
     </ClCompile>
     <ClCompile Include="Boxxy.cpp">
       <Filter>Source Files\Game</Filter>
->>>>>>> 4b986f7d8f755482192996f9f346a7966d54e251
     </ClCompile>
   </ItemGroup>
 </Project>
