--- a/SDL2_project/SDL2_project.vcxproj.filters
+++ b/SDL2_project/SDL2_project.vcxproj.filters
@@ -154,7 +154,7 @@
       <Filter>Header Files\Game\Screens</Filter>
     </ClInclude>
     <ClInclude Include="ScoreManager.h">
-      <Filter>Source Files\Game</Filter>
+      <Filter>Header Files\Managers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -258,7 +258,7 @@
       <Filter>Source Files\Game\Screens</Filter>
     </ClCompile>
     <ClCompile Include="ScoreManager.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Managers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
